fixed overflow issue

--- a/styles/components/header.scss
+++ b/styles/components/header.scss
@@ -6,7 +6,6 @@
 	-webkit-backdrop-filter: blur(16px) saturate(180%);
 	border-bottom: 1px solid rgba(255, 255, 255, 0.125);
 	position: relative;
-	overflow: hidden;
 	z-index: 3;
 
 	&__shimmer {
